--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <html data-wf-page="63e11cde7044541d81c4eb83" data-wf-site="63e11cde7044540a47c4eb7d">
 <head>
   <meta charset="utf-8">
-  <title>Chomp - Webflow Ecommerce HTML Website Template</title>
-  <meta content="Free Webflow eCommerce template for food, delivery &amp; restaurant businesses. Start selling your products online with unlimited customization. Quickly change the colours, images &amp; fonts to take control over the visual direction. Build by flowbase.co" name="description">
-  <meta content="Chomp - Webflow Ecommerce HTML Website Template" property="og:title">
-  <meta content="Free Webflow eCommerce template for food, delivery &amp; restaurant businesses. Start selling your products online with unlimited customization. Quickly change the colours, images &amp; fonts to take control over the visual direction. Build by flowbase.co" property="og:description">
-  <meta content="Chomp - Webflow Ecommerce HTML Website Template" property="twitter:title">
-  <meta content="Free Webflow eCommerce template for food, delivery &amp; restaurant businesses. Start selling your products online with unlimited customization. Quickly change the colours, images &amp; fonts to take control over the visual direction. Build by flowbase.co" property="twitter:description">
+  <title>CJ's Nashville Hot Chicken</title>
+  <meta content="We're here to bring a taste of Nashville to northern Virginia." name="description">
+  <meta content="CJ's Nashville Hot Chicken" property="og:title">
+  <meta content="We're here to bring a taste of Nashville to northern Virginia." property="og:description">
+  <meta content="CJ's Nashville Hot Chicken" property="twitter:title">
+  <meta content="We're here to bring a taste of Nashville to northern Virginia." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -37,7 +37,7 @@ body{
   <div data-animation="default" class="navbar w-nav" data-easing2="ease" data-easing="ease" data-collapse="medium" data-w-id="33c883c6-4afc-cc73-3bca-d2857a9d4bc2" role="banner" data-duration="400" id="Navigation">
     <div class="navigation-container">
       <div class="navigation-left">
-        <a href="index.html" aria-current="page" class="brand w-nav-brand w--current"><img src="images/Logo.svg" width="40" alt=""></a>
+        <a href="index.html" aria-current="page" class="brand w-nav-brand w--current"><img src="images/Logo.png" width="80" alt=""></a>
       </div>
       <div class="navigation-right">
         <div class="menu-button w-nav-button">
@@ -46,7 +46,7 @@ body{
         <nav role="navigation" class="nav-menu w-nav-menu">
           <a href="index.html" aria-current="page" class="nav-link w-nav-link w--current">Home</a>
           <a href="order.html" class="nav-link w-nav-link">Order</a>
-          <a href="company.html" class="nav-link w-nav-link">Company</a>
+          <a href="company.html" class="nav-link w-nav-link">About</a>
           <a href="faq.html" class="nav-link w-nav-link">FAQ</a>
           <a href="mailto:hello@website.com?subject=Hi" class="nav-link w-nav-link">Contact</a>
         </nav>
@@ -140,11 +140,11 @@ body{
         <h1 style="-webkit-transform:translate3d(-25PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-25PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-25PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-25PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="hero-h1">Beautiful food &amp; takeaway, <span class="brand-span">delivered</span> to your door.</h1>
         <p style="-webkit-transform:translate3d(-25PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-25PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-25PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-25PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="hero-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry&#x27;s standard dummy text ever since the 1500.</p>
         <div style="-webkit-transform:translate3d(-25PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-25PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-25PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-25PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="button-wrapper">
-          <a href="order.html" class="button w-button">Place an Order</a>
+          <a href="order.html" class="button w-button">View Menu</a>
         </div>
-        <div style="-webkit-transform:translate3d(-25PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-25PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-25PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-25PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="review-wrap"><img src="images/trustpilot-logo.svg" alt="" class="review-logo">
+        <!-- <div style="-webkit-transform:translate3d(-25PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-25PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-25PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-25PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="review-wrap"><img src="images/trustpilot-logo.svg" alt="" class="review-logo">
           <div class="review-text"><span class="brand-span">4.8 out of 5</span> based on 2000+ reviews</div>
-        </div>
+        </div> -->
       </div>
       <div class="hero-image-wrap"><img src="https://uploads-ssl.webflow.com/5e865e09d8efa3310676b585/5e865e09d8efa395f376b5c1_Hero%20Image.png" alt="Food Delivery" style="opacity:0;-webkit-transform:translate3d(0, 0, 0) scale3d(0.95, 0.95, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0.95, 0.95, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0.95, 0.95, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0.95, 0.95, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="hero-image"></div>
     </div>
@@ -346,7 +346,7 @@ body{
   <div class="footer">
     <div class="container">
       <div class="w-layout-grid footer-grid">
-        <div id="w-node-_67f7db32-28d2-9f37-8b84-a159dcc6da5a-dcc6da57" class="footer-column"><img src="images/Logo.svg" width="40" alt="" class="footer-logo">
+        <div id="w-node-_67f7db32-28d2-9f37-8b84-a159dcc6da5a-dcc6da57" class="footer-column"><img src="images/Logo.png" width="80" alt="" class="footer-logo">
           <p>Takeaway &amp; Delivery template<br>for small - medium businesses. </p>
         </div>
         <div id="w-node-_67f7db32-28d2-9f37-8b84-a159dcc6da5e-dcc6da57" class="footer-column">
@@ -370,7 +370,8 @@ body{
       </div>
       <div class="footer-legal">
         <div class="footer-detail-left">
-          <div class="legal">Built by <a href="http://www.flowbase.co" target="_blank" class="webflow-link">Flowbase</a>  · Powered by <a href="http://webflow.com/" target="_blank" class="webflow-link">Webflow</a>
+          <div class="legal">Copyright © 2023. All rights reserved.
+            <!-- <a href="http://www.flowbase.co" target="_blank" class="webflow-link">Flowbase</a>  · Powered by <a href="http://webflow.com/" target="_blank" class="webflow-link">Webflow</a> -->
           </div>
         </div>
         <div class="footer-detail-right">
