--- a/paypal-checkout.html
+++ b/paypal-checkout.html
@@ -33,7 +33,7 @@ body{
   <div data-animation="default" class="navbar w-nav" data-easing2="ease" data-easing="ease" data-collapse="medium" data-w-id="33c883c6-4afc-cc73-3bca-d2857a9d4bc2" role="banner" data-duration="400" id="Navigation">
     <div class="navigation-container">
       <div class="navigation-left">
-        <a href="index.html" class="brand w-nav-brand"><img src="images/Logo.svg" width="40" alt=""></a>
+        <a href="index.html" class="brand w-nav-brand"><img src="images/Logo.png" width="80" alt=""></a>
       </div>
       <div class="navigation-right">
         <div class="menu-button w-nav-button">
@@ -247,7 +247,7 @@ body{
   <div class="footer">
     <div class="container">
       <div class="w-layout-grid footer-grid">
-        <div id="w-node-_67f7db32-28d2-9f37-8b84-a159dcc6da5a-dcc6da57" class="footer-column"><img src="images/Logo.svg" width="40" alt="" class="footer-logo">
+        <div id="w-node-_67f7db32-28d2-9f37-8b84-a159dcc6da5a-dcc6da57" class="footer-column"><img src="images/Logo.png" width="80" alt="" class="footer-logo">
           <p>Takeaway &amp; Delivery template<br>for small - medium businesses. </p>
         </div>
         <div id="w-node-_67f7db32-28d2-9f37-8b84-a159dcc6da5e-dcc6da57" class="footer-column">
