--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <html data-wf-page="63e11cde70445453c8c4eb88" data-wf-site="63e11cde7044540a47c4eb7d">
 <head>
   <meta charset="utf-8">
-  <title>Chomp - Webflow Ecommerce HTML Website Template</title>
+  <title>404 - CJ's Nashville Hot Chickenv</title>
   <meta content="Chomp - Webflow Ecommerce HTML Website Template" property="og:title">
   <meta content="Chomp - Webflow Ecommerce HTML Website Template" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -34,7 +34,7 @@ body{
   <div class="footer">
     <div class="container">
       <div class="w-layout-grid footer-grid">
-        <div id="w-node-_67f7db32-28d2-9f37-8b84-a159dcc6da5a-dcc6da57" class="footer-column"><img src="images/Logo.svg" width="40" alt="" class="footer-logo">
+        <div id="w-node-_67f7db32-28d2-9f37-8b84-a159dcc6da5a-dcc6da57" class="footer-column"><img src="images/Logo.png" width="80" alt="" class="footer-logo">
           <p>Takeaway &amp; Delivery template<br>for small - medium businesses. </p>
         </div>
         <div id="w-node-_67f7db32-28d2-9f37-8b84-a159dcc6da5e-dcc6da57" class="footer-column">
