--- a/faq.html
+++ b/faq.html
@@ -40,12 +40,12 @@ body{
         </div>
         <nav role="navigation" class="nav-menu w-nav-menu">
           <a href="index.html" class="nav-link w-nav-link">Home</a>
-          <a href="order.html" class="nav-link w-nav-link">Order</a>
-          <a href="company.html" class="nav-link w-nav-link">Company</a>
+          <a href="order.html" class="nav-link w-nav-link">Menu</a>
+          <a href="company.html" class="nav-link w-nav-link">About</a>
           <a href="faq.html" aria-current="page" class="nav-link w-nav-link w--current">FAQ</a>
           <a href="mailto:hello@website.com?subject=Hi" class="nav-link w-nav-link">Contact</a>
         </nav>
-        <div data-node-type="commerce-cart-wrapper" data-open-product="" data-wf-cart-type="rightSidebar" data-wf-cart-query="" data-wf-page-link-href-prefix="" class="w-commerce-commercecartwrapper">
+        <!-- <div data-node-type="commerce-cart-wrapper" data-open-product="" data-wf-cart-type="rightSidebar" data-wf-cart-query="" data-wf-page-link-href-prefix="" class="w-commerce-commercecartwrapper">
           <a href="#" data-node-type="commerce-cart-open-link" class="w-commerce-commercecartopenlink cart-button w-inline-block"><svg class="w-commerce-commercecartopenlinkicon cart-icon" width="17px" height="17px" viewbox="0 0 17 17">
               <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                 <path d="M2.60592789,2 L0,2 L0,0 L4.39407211,0 L4.84288393,4 L16,4 L16,9.93844589 L3.76940945,12.3694378 L2.60592789,2 Z M15.5,17 C14.6715729,17 14,16.3284271 14,15.5 C14,14.6715729 14.6715729,14 15.5,14 C16.3284271,14 17,14.6715729 17,15.5 C17,16.3284271 16.3284271,17 15.5,17 Z M5.5,17 C4.67157288,17 4,16.3284271 4,15.5 C4,14.6715729 4.67157288,14 5.5,14 C6.32842712,14 7,14.6715729 7,15.5 C7,16.3284271 6.32842712,17 5.5,17 Z" fill="currentColor" fill-rule="nonzero"></path>
@@ -125,7 +125,7 @@ body{
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
@@ -338,8 +338,8 @@ body{
       </div>
       <div class="footer-legal">
         <div class="footer-detail-left">
-          <div class="legal">Built by <a href="http://www.flowbase.co" target="_blank" class="webflow-link">Flowbase</a>  · Powered by <a href="http://webflow.com/" target="_blank" class="webflow-link">Webflow</a>
-          </div>
+          <!-- <div class="legal">Built by <a href="http://www.flowbase.co" target="_blank" class="webflow-link">Flowbase</a>  · Powered by <a href="http://webflow.com/" target="_blank" class="webflow-link">Webflow</a>
+          </div> -->
         </div>
         <div class="footer-detail-right">
           <div class="social-icon-wrap">
