--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ body{
       <div data-duration-in="300" data-duration-out="100" data-current="Burgers" data-easing="ease" class="w-tabs">
         <div class="tab-menu-round w-tab-menu">
           <a data-w-tab="Burgers" class="tab-link-round w-inline-block w-tab-link w--current">
-            <div>Burgers</div>
+            <div>Chicken</div>
           </a>
           <a data-w-tab="Sides" class="tab-link-round w-inline-block w-tab-link">
             <div>Sides</div>
@@ -367,7 +367,19 @@ body{
   </div>
   <div class="footer">
     <div class="container">
-      <div class="w-layout-grid footer-grid">
+      <div class="layout-grid">
+        <div id="w-node-_67f7db32-28d2-9f37-8b84-a159dcc6da5a-dcc6da57" class="footer-column">
+          <img src="images/Logo.png" width="80" alt="" class="footer-logo">
+        </div>
+        <div id="w-node-_67f7db32-28d2-9f37-8b84-a159dcc6da5e-dcc6da57" class="footer-column">
+          <!-- <div class="title">company</div> -->
+          <a href="index.html" aria-current="page" class="footer-link w--current">Home</a>
+          <a href="order.html" class="footer-link">Order</a>
+          <a href="faq.html" class="footer-link">FAQ</a>
+          <a href="mailto:hello@website.com?subject=Hi" class="footer-link">Contact</a>
+        </div>
+      </div>
+      <!-- <div class="w-layout-grid footer-grid">
         <div id="w-node-_67f7db32-28d2-9f37-8b84-a159dcc6da5a-dcc6da57" class="footer-column"><img src="images/Logo.png" width="80" alt="" class="footer-logo">
           <p>Takeaway &amp; Delivery template<br>for small - medium businesses. </p>
         </div>
@@ -389,7 +401,7 @@ body{
           <div class="title">FLOWBASE </div>
           <a href="http://www.flowbase.co" target="_blank" class="footer-link">More Cloneables</a>
         </div>
-      </div>
+      </div> -->
       <div class="footer-legal">
         <div class="footer-detail-left">
           <div class="legal">Copyright © 2023. All rights reserved.
@@ -397,11 +409,14 @@ body{
           </div>
         </div>
         <div class="footer-detail-right">
-          <div class="social-icon-wrap">
+          <div class="detail-right">
+            <p class="detail">CJ's Nashville Hot Chicken</p>
+          </div>
+          <!-- <div class="social-icon-wrap">
             <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/5e360a99f4dd53fd793925af/5e362b9c121267b0fabbef18_social-instagram.svg" alt="" class="social-icon"></a>
             <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/5e360a99f4dd53fd793925af/5e362b9cf4dd53d8073a05cd_social-twitter.svg" alt="" class="social-icon"></a>
             <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/5e360a99f4dd53fd793925af/5e362b9c7c077b1740e27d28_social-youtube.svg" alt="" class="social-icon"></a>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
