modified order and home pages

--- a/order.html
+++ b/order.html
@@ -25,7 +25,7 @@ body{
 <body>
   <div id="Banner" class="banner">
     <div class="banner-wrap">
-      <div class="notice-text">We&#x27;re open and available for takeaway &amp; delivery. <a href="order.html" aria-current="page" class="white-link w--current">Order Now</a>
+      <div class="notice-text">We&#x27;re open and available for pickup &amp; delivery. <a href="order.html" aria-current="page" class="white-link w--current">Order Now</a>
       </div>
     </div>
   </div>
