optimized images and adjusted error pages

--- a/401.html
+++ b/401.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon Feb 06 2023 15:59:39 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html>
 <html data-wf-page="63e11cde7044549776c4eb87" data-wf-site="63e11cde7044540a47c4eb7d">
 <head>
   <meta charset="utf-8">
