--- a/404.html
+++ b/404.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon Feb 06 2023 15:59:39 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html>
 <html data-wf-page="63e11cde70445453c8c4eb88" data-wf-site="63e11cde7044540a47c4eb7d">
 <head>
   <meta charset="utf-8">
@@ -24,66 +23,10 @@ body{
 </head>
 <body>
   <div class="utility-page-wrap-2">
-    <div class="container flex-vertical"><img src="images/Step-02.png" alt="" class="utility-image">
+    <div class="container flex-vertical"><img src="images/Logo.png" alt="" class="utility-image">
       <h2>Page Not Found</h2>
       <div>
-        <p class="utility-paragraph">Sorry, the page you&#x27;re looking for cannot be found <br>Visit our <a href="#" class="link">homepage</a>, to get back on track.</p>
-      </div>
-    </div>
-  </div>
-  <div class="footer">
-    <div class="container">
-      <div class="layout-grid">
-        <div id="w-node-_67f7db32-28d2-9f37-8b84-a159dcc6da5a-dcc6da57" class="footer-column">
-          <img src="images/Logo.png" width="80" alt="" class="footer-logo">
-        </div>
-        <div id="w-node-_67f7db32-28d2-9f37-8b84-a159dcc6da5e-dcc6da57" class="footer-column">
-          <!-- <div class="title">company</div> -->
-          <a href="index.html" aria-current="page" class="footer-link w--current">Home</a>
-          <a href="order.html" class="footer-link">Order</a>
-          <a href="faq.html" class="footer-link">FAQ</a>
-          <a href="mailto:hello@website.com?subject=Hi" class="footer-link">Contact</a>
-        </div>
-      </div>
-      <!-- <div class="w-layout-grid footer-grid">
-        <div id="w-node-_67f7db32-28d2-9f37-8b84-a159dcc6da5a-dcc6da57" class="footer-column"><img src="images/Logo.png" width="80" alt="" class="footer-logo">
-          <p>Takeaway &amp; Delivery template<br>for small - medium businesses. </p>
-        </div>
-        <div id="w-node-_67f7db32-28d2-9f37-8b84-a159dcc6da5e-dcc6da57" class="footer-column">
-          <div class="title">company</div>
-          <a href="index.html" aria-current="page" class="footer-link w--current">Home</a>
-          <a href="order.html" class="footer-link">Order</a>
-          <a href="faq.html" class="footer-link">FAQ</a>
-          <a href="mailto:hello@website.com?subject=Hi" class="footer-link">Contact</a>
-        </div>
-        <div id="w-node-_67f7db32-28d2-9f37-8b84-a159dcc6da69-dcc6da57" class="footer-column">
-          <div class="title">TEMPLATE</div>
-          <a href="template/styleguide.html" class="footer-link">Style Guide</a>
-          <a href="template/changelog.html" class="footer-link">Changelog</a>
-          <a href="template/licence.html" class="footer-link">Licence</a>
-          <a href="https://university.webflow.com/" target="_blank" class="footer-link">Webflow University</a>
-        </div>
-        <div id="w-node-_67f7db32-28d2-9f37-8b84-a159dcc6da72-dcc6da57" class="footer-column">
-          <div class="title">FLOWBASE </div>
-          <a href="http://www.flowbase.co" target="_blank" class="footer-link">More Cloneables</a>
-        </div>
-      </div> -->
-      <div class="footer-legal">
-        <div class="footer-detail-left">
-          <div class="legal">Copyright © 2023. All rights reserved.
-            <!-- <a href="http://www.flowbase.co" target="_blank" class="webflow-link">Flowbase</a>  · Powered by <a href="http://webflow.com/" target="_blank" class="webflow-link">Webflow</a> -->
-          </div>
-        </div>
-        <div class="footer-detail-right">
-          <div class="detail-right">
-            <p class="detail">CJ's Nashville Hot Chicken</p>
-          </div>
-          <!-- <div class="social-icon-wrap">
-            <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/5e360a99f4dd53fd793925af/5e362b9c121267b0fabbef18_social-instagram.svg" alt="" class="social-icon"></a>
-            <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/5e360a99f4dd53fd793925af/5e362b9cf4dd53d8073a05cd_social-twitter.svg" alt="" class="social-icon"></a>
-            <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/5e360a99f4dd53fd793925af/5e362b9c7c077b1740e27d28_social-youtube.svg" alt="" class="social-icon"></a>
-          </div> -->
-        </div>
+        <p class="utility-paragraph">Sorry, the page you&#x27;re looking for cannot be found <br>Visit our <a href="index.html" class="link">homepage</a>, to get back on track.</p>
       </div>
     </div>
   </div>
