faq section adjustments, next is meta data and cdn stuff

--- a/faq.html
+++ b/faq.html
@@ -43,9 +43,9 @@
         <div class="notice-text">
           If you have any other general questions, please email
           <a
-            href="mailto:cjsnashvillehot@gmail.com?subject=Inquiry"
+            href="mailto:cbj@cjsnashvillehot.com?subject=Inquiry"
             class="white-link"
-            >cjsnashvillehot@gmail.com</a
+            >cbj@cjsnashvillehot.com</a
           >
         </div>
       </div>
@@ -317,8 +317,12 @@
                   </a>
                   <div class="faq-content">
                     <p class="faq-paragraph">
-                      We are located at the EatLoco Farmers Market at One Loudoun. The address is 44578 Atwater Dr, Ashburn, VA
+                      Our primary location is at the Frontier Kitchen for pickup and delivery. The address is 25387 Pleasant Valley Rd Unit 110, Chantilly, VA 20152.
                       20147
+                    </p>
+                    <p class="faq-paragraph">
+                      On <span class="brand-span">Saturday’s</span> we are located at the EatLoco Farmers Market at One Loudoun. The address is 44578 Atwater Dr, Ashburn, VA
+                      20147.
                     </p>
                   </div>
                 </div>
@@ -331,7 +335,7 @@
                   </a>
                   <div class="faq-content">
                     <p class="faq-paragraph">
-                      We are open Saturday's from 9 A.M. to 1 P.M.
+                      We are open Sun - Fri from 9 A.M. to 5 P.M. at the Frontier Kitchen, and 9 A.M. to 1 P.M. on Saturday's at the Farmer's Market.
                     </p>
                   </div>
                 </div>
