--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <a href="company.html" class="nav-link w-nav-link">About</a>
             <a href="faq.html" class="nav-link w-nav-link">FAQ</a>
             <a
-              href="mailto:hello@website.com?subject=Hi"
+              href="mailto:cbj@cjsnashvillehot.com?subject=Inquiry"
               class="nav-link w-nav-link"
               >Contact</a
             >
@@ -300,7 +300,7 @@
                 </div>
                 <p class="menu-item-description"></p>
                 <div class="menu-wrapper">
-                  <p class="menu-items">Parmesean Zucchini Crisps</p>
+                  <p class="menu-items">Parmesan Zucchini Crisps</p>
                   <span class="menu-item-price brand-span">$5.00</span>
                 </div>
                 <p class="menu-item-description"></p>
