--- a/order.html
+++ b/order.html
@@ -212,7 +212,7 @@
                 </div>
                 <p class="menu-item-description"></p>
                 <div class="menu-wrapper">
-                  <p class="menu-items">Parmesean Zucchini Crisps</p>
+                  <p class="menu-items">Parmesan Zucchini Crisps</p>
                   <span class="menu-item-price brand-span">$5.00</span>
                 </div>
                 <p class="menu-item-description"></p>
