need to make routing enhancements

--- a/company.html
+++ b/company.html
@@ -143,7 +143,7 @@
             </p>
             <p>
               We've served our perfected recipes to many family, friends,
-              neighbors, and co-workers to our house for "Nashville" hot chicken
+              neighbors, and co-workers at our house for "Nashville" hot chicken
               parties. Now, we at CJ's Nashville Hot Chicken are happpy to share
               the joy of Nashville with you.
             </p>
